# sis_kursova_2

./: CMakeLists.txt  Makefile  main.cpp
